general/pulumi/ingress-nginx/main/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: foo
    name: foo
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: foo
    type: ClusterIP
