general/pulumi/ingress-nginx/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: foo
spec:
    ingressClassName: nginx
    rules:
        - host: foo.example.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: foo
                            port:
                                number: 80
